--- a/newwebsite/css/style.css
+++ b/newwebsite/css/style.css
@@ -12,7 +12,8 @@ body {
 }
 
 body,
-input {
+input,
+textarea {
     font-family: 'GlacialIndifferenceRegular';
     font-weight: normal;
     font-style: normal;
@@ -101,7 +102,6 @@ input {
     align-self: center;
     flex-direction: column;
     width: 50rem;
-    text-indent: 1rem;
     height: 100%;
 }
 
@@ -121,6 +121,26 @@ input {
 .small-text {
     font-size: 12px;
     color: grey;
+}
+
+.hr {
+    display: block;
+    min-height: 3px;
+    background: black;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+.image-text-left-right {
+    display: flex;
+}
+
+.image-text-left-right p {
+    margin: 0;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 
