--- a/newwebsite/oops/css/style.css
+++ b/newwebsite/oops/css/style.css
@@ -20,6 +20,11 @@ textarea {
     font-size: 18px;
 }
 
+.flexbox img {
+  width: 100%;
+  height: auto;
+}
+
 .input {
     padding-left: .25rem;
 }
